<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/login_cbtn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cpb_colorIndicator="@color/colorPrimary"
        app:cpb_colorIndicatorBackground="@android:color/white"
        app:cpb_colorProgress="@color/colorPrimaryLight"
        app:cpb_cornerRadius="2dp"
        app:cpb_selectorIdle="@drawable/circular_button_style"
        app:cpb_textComplete="@string/complete_upper"
        app:cpb_textError="@string/error_upper"
        app:cpb_textIdle="@string/enter" />

    <RelativeLayout
        android:id="@+id/login_rlayout_toregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/login_tv_toregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/to_register"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/login_tv_toregister"
            android:src="@drawable/ic_right" />

    </RelativeLayout>

</LinearLayout>