<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/change_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/change_profile_civ_person"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="20dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/change_profile_civ_car"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/change_profile_tv_changepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/change_password"
                android:textColor="@drawable/tv_pressed"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_profile_til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/change_profile_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_profile_til_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/change_profile_et_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_profile_til_carbrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/change_profile_et_carbrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_brand"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_profile_til_carmodel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/change_profile_et_carmodel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_model"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.dd.CircularProgressButton
                android:id="@+id/change_profile_cbtn_changeprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:cpb_colorIndicator="@color/colorPrimary"
                app:cpb_colorIndicatorBackground="@android:color/white"
                app:cpb_colorProgress="@color/colorPrimaryLight"
                app:cpb_cornerRadius="2dp"
                app:cpb_selectorIdle="@drawable/circular_button_style"
                app:cpb_textComplete="@string/complete_upper"
                app:cpb_textError="@string/error_upper"
                app:cpb_textIdle="@string/change_upper" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>