<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/title_change_rating"
                android:textAlignment="center"
                android:textColor="@color/gray_dark"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/change_rating_til_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/change_rating_et_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="16" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/change_rating_btn_find"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_back"
                android:text="@string/find"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="7dp"
                android:background="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_rating_layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/change_rating_civ_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/change_rating_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/change_rating_civ_profile"
                    android:gravity="center_horizontal"
                    android:textSize="20sp" />

            </RelativeLayout>

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/change_rating_srb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                app:srb_borderColor="@color/colorPrimaryDark"
                app:srb_fillColor="@android:color/holo_orange_light"
                app:srb_numberOfStars="5"
                app:srb_rating="0"
                app:srb_starBackgroundColor="@android:color/white"
                app:srb_starBorderWidth="4"
                app:srb_starSize="40dp"
                app:srb_stepSize="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/change_rating_btn_changerating"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/button_back"
                    android:text="@string/rate"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
